8256506: Create a standalone version of Nashorn for Java 15+
Reviewed-by: sundar